# toss

./: .gitignore  README.md  pyproject.toml
docs/: file_transfer.md
src/toss/: __init__.py  __main__.py  cli.py  config.py  server.py
src/toss/capabilities/: __init__.py
src/toss/capabilities/file_transfer/: __init__.py  scp.py
